--- a/style2.css
+++ b/style2.css
@@ -28,15 +28,10 @@ border-color: black;
     grid-area: footer;
 }
 .drawingBoard{
-    background-color: #f71818;
+    background-color: #f6eeee;
     height: 400px;
     width: 400px;
     display: grid;
 
     
-}
-.panel{
-    background-color: blue;
-    display: flex;
-
 }
